syntax = "proto3";

import "google/api/annotations.proto";


option java_multiple_files = true;
option java_package = "com.apiiro.avigtest.protoapi";

//option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package protoapi;

service ProtoServer {
  rpc GetPerson (PersonRequest) returns (Person) {
    option (google.api.http) = {
      get : "/url/{vr}"
    };

  }
  rpc GetFullPerson (PersonRequest) returns (Person) {
    option (google.api.http).post = "/v3/discovery:client_status";
    option (google.api.http).body = "*";

  }
  rpc StreamClientStatus(stream PersonRequest) returns (stream Person) {

  }
}
message PersonRequest {
  string name = 1;
}

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
}